--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=7bd005a41f002f97eb0a",
+    "/css/app.css": "/css/app.css?id=a2a25b24d1be276fd760",
+    "/js/app.js.map": "/js/app.js.map?id=ec6d201a30c64b941806",
+    "/css/app.css.map": "/css/app.css.map?id=7dfae00d87f2fabf1f65"
 }
