Upgrade Laravel mix and other tweaks

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=cf0d14e62e194eaac3fb",
-    "/css/app.css": "/css/app.css?id=34d3f3c6d93594032503",
-    "/js/app.js.map": "/js/app.js.map?id=00c50c1de6815d68d731",
-    "/css/app.css.map": "/css/app.css.map?id=7109909409cf1fe9b0a6"
+    "/js/app.js": "/js/app.js?id=736be4da220c01c9f24d",
+    "/css/app.css": "/css/app.css?id=4cd30d3ac9aa6c103ccc",
+    "/js/app.js.map": "/js/app.js.map?id=8698ccfc60c8c8314101"
 }
