--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=52a457f493c51dc1c4be",
-    "/css/app.css": "/css/app.css?id=8e4cd2a12ba4fe418368",
-    "/js/app.js.map": "/js/app.js.map?id=ab6f1c6a90c33d22cfad"
+    "/js/app.js": "/js/app.js?id=324ff589b56541d1d745",
+    "/css/app.css": "/css/app.css?id=fee6ed5b969fefa2fc5b"
 }
