--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.1.3",
         "bepsvpt/secure-headers": "^5.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
@@ -17,7 +18,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "classmap": [
