--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.6",
         "axios": "^0.18",
+        "beerslider": "^1.0.3",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -22,8 +23,5 @@
         "sass": "^1.15.2",
         "sass-loader": "7.*",
         "vue-template-compiler": "^2.5.21"
-    },
-    "dependencies": {
-        "beerslider": "^1.0.3"
     }
 }
