--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.9",
-        "axios": "^0.19",
+        "@fortawesome/fontawesome-free": "^5.10",
+        "axios": "^0.19.0",
         "beerslider": "^1.0.3",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
+        "bootstrap": "^4.3.1",
+        "cross-env": "^5.2.0",
         "jquery": "^3.4",
-        "laravel-mix": "^4.0.7",
+        "laravel-mix": "^4.1",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "2.3.1",
+        "popper.js": "^1.15.0",
+        "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "7.*",
-        "vue-template-compiler": "^2.5.21"
+        "sass-loader": "^7.3.1",
+        "vue-template-compiler": "^2.6.10"
     }
 }
