--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=4904db599c201c26f34d",
-    "/css/app.css": "/css/app.css?id=88f73be41706044388aa",
-    "/js/app.js.map": "/js/app.js.map?id=6a3a879b580722054af6"
+    "/js/app.js": "/js/app.js?id=882fe24a346e6dcd284e",
+    "/css/app.css": "/css/app.css?id=bfbb60a56d58f188d60a"
 }
