--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@
 /public/storage
 /storage/*.key
 /vendor
-/.idea
-/.vscode
 .env
+.env.backup
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
